to fix: About bottom figures, vert long tablet overflow

--- a/styles.css
+++ b/styles.css
@@ -628,23 +628,15 @@ footer{
 /*для ПеКА*/
 @media screen and (min-width: 1201px) {
     .About-figures{
-        display: flex;
-        flex-direction: row;
-        width:100%;
-        /*justify-content: center;*/
-        /*align-items: center;*/
+
     }
+
     .About-figures figure{
-        padding:10px;
-        width:50%;
-        aspect-ratio: 1/1;
-        text-align: center;
+
     }
+
     .About-figures img{
-        width:100%;
-        height:100%;
-        object-fit: contain;
-        object-position: top;
+
     }
 
 }
@@ -660,20 +652,41 @@ footer{
 
 /*для мобилок*/
 @media screen and (max-width: 480px) {
+    .About-figures{
+
+    }
+    .About-figures img {
+
+    }
+
+    .About-figures figure{
+
+    }
+}
+/*-------------общее-------------*/
+.About-whole-container{ /* весь контейнер */
+    display:flex;
+    flex-direction:column;
+}
+
+.About-figures { /* ящик с 2-мя фигурами */
+    display:flex;
+    flex-direction: row;
 
 }
 
-.About-whole-container{
-
+.About-figures figure{ /* фигура - фото и подпись */
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-
-.About-figures figure{
-
+.About-figures img{ /* фото в фигуре */
+    width:90%;
 }
 
-.About-figures img{
-
+.About-figures figcaption{
+    font-style:italic;
 }
 
 .About-description{
@@ -689,9 +702,7 @@ footer{
     font-weight:bold;
 }
 
-.About-figures figcaption{
-    font-style:italic;
-}
+
 
 /*=====================Contacts раздел========================*/
 .Contacts-whole-container{
